crates/escalier_parser/src/snapshots/escalier_parser__tests__jsx-3.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"<Foo>Hello {world}!</Foo>\")"
---
Ok(
    Program {
        body: [
            ExprStmt(
                Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 25,
                        },
                    },
                    span: 0..25,
                    kind: JSXElement(
                        JSXElement {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 25,
                                },
                            },
                            span: 0..25,
                            name: "Foo",
                            attrs: [],
                            children: [
                                JSXText(
                                    JSXText {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 5,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 11,
                                            },
                                        },
                                        span: 5..11,
                                        value: "Hello ",
                                    },
                                ),
                                JSXExprContainer(
                                    JSXExprContainer {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 11,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 18,
                                            },
                                        },
                                        span: 11..18,
                                        expr: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 12,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 17,
                                                },
                                            },
                                            span: 12..17,
                                            kind: Ident(
                                                Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 12,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 17,
                                                        },
                                                    },
                                                    span: 12..17,
                                                    name: "world",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ),
                                JSXText(
                                    JSXText {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 18,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 19,
                                            },
                                        },
                                        span: 18..19,
                                        value: "!",
                                    },
                                ),
                            ],
                        },
                    ),
                    inferred_type: None,
                },
            ),
        ],
    },
)
