crates/escalier_parser/src/snapshots/escalier_parser__tests__jsx-4.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"<Foo>{<Bar>{baz}</Bar>}</Foo>\")"
---
Ok(
    Program {
        body: [
            Expr {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 29,
                    },
                },
                span: 0..29,
                expr: Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 29,
                        },
                    },
                    span: 0..29,
                    kind: JSXElement(
                        JSXElement {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 29,
                                },
                            },
                            span: 0..29,
                            name: "Foo",
                            attrs: [],
                            children: [
                                JSXExprContainer(
                                    JSXExprContainer {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 5,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 23,
                                            },
                                        },
                                        span: 5..23,
                                        expr: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 6,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 22,
                                                },
                                            },
                                            span: 6..22,
                                            kind: JSXElement(
                                                JSXElement {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 6,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 22,
                                                        },
                                                    },
                                                    span: 6..22,
                                                    name: "Bar",
                                                    attrs: [],
                                                    children: [
                                                        JSXExprContainer(
                                                            JSXExprContainer {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 11,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 16,
                                                                    },
                                                                },
                                                                span: 11..16,
                                                                expr: Expr {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 12,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 15,
                                                                        },
                                                                    },
                                                                    span: 12..15,
                                                                    kind: Ident(
                                                                        Ident {
                                                                            loc: SourceLocation {
                                                                                start: Position {
                                                                                    line: 0,
                                                                                    column: 12,
                                                                                },
                                                                                end: Position {
                                                                                    line: 0,
                                                                                    column: 15,
                                                                                },
                                                                            },
                                                                            span: 12..15,
                                                                            name: "baz",
                                                                        },
                                                                    ),
                                                                    inferred_type: None,
                                                                },
                                                            },
                                                        ),
                                                    ],
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ),
                            ],
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
