crates/escalier_parser/src/snapshots/escalier_parser__tests__jsx-5.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"<Foo></Foo>\")"
---
Ok(
    Program {
        body: [
            Expr {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 11,
                    },
                },
                span: 0..11,
                expr: Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 11,
                        },
                    },
                    span: 0..11,
                    kind: JSXElement(
                        JSXElement {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 11,
                                },
                            },
                            span: 0..11,
                            name: "Foo",
                            attrs: [],
                            children: [],
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
